tests/invalid_programs/println2.jas
// println expects a single argument.

println(1, 2);
